# JNU-Cplusplus-labs

./: Device.cpp  one.cpp
2020101249/: 2020101249.cpp
2021102176/: week1-1.cpp  week1-2.cpp
exam/: virtual_pointer.cpp  考试题目.docx
exam/2020100099/: test2.cpp
exam/2020100628/: 第一题初级题目.cpp  第三题.cpp  第二题.cpp  第二题.docx
exam/2020100679/: 题目2
exam/2020101246/: fir.cpp  sec.cpp  thir.cpp  虚函数
exam/2020101249/: T1.cpp  T2.cpp
exam/2020101255/: task1.cpp  task2.cpp  task3.cpp
exam/2020101266/: Main_Q1.cpp  Main_Q3.cpp  Q1.txt  Q2.txt
exam/2020101273/: intermediate.cpp  intermediate.docx  junior.cpp  senior.cpp
exam/2020101275/: Q2-example1.cpp  Q2-example2.cpp  question2.txt  question3.cpp
exam/2020101282/: question1.cpp  question2.cpp  question2.txt  question3.cpp
exam/2020101285/: Q2.md
exam/2020101297/: Animal.cpp  counter.cpp  virtual pointer.txt
exam/2020101299/: summary
exam/2020101300/: 初级题目.cpp  高级题目.cpp
exam/2020103132/: 1.cpp  2.cpp  3.cpp
exam/2020103134/: Drawable.cpp  Drawable_UML图.drawio  product.cpp  vptr.cpp  vptr_UML图.drawio  虚指针的作用.docx
exam/2020103438/: work1.md  work2.md  work3.cpp
exam/2020103905/: Drawable.cpp  Virtual.cpp  虚函数和抽象类.txt
exam/2020104057/: test_1.cpp  test_1.md  test_1code.cpp  test_2.md  test_2code.cpp  test_3code.cpp
exam/2020104300/: T1_10.cpp  T2_1.cpp
exam/2020104485/: high_level.cpp  middle_level.cpp  primary.cpp
exam/2021100822/: readme
exam/2021102144/: exam1.cpp  exam2.cpp  exam3.cpp
exam/2021102148_exma/: 1.cpp  2.cpp  3.cpp
exam/2021102150Q1/: virtual.cpp
exam/2021102150Q2/: 02.cpp
exam/2021102152/: Complex.cpp  c.cpp  virtual.txt  vitual.cpp
exam/2021102210/: prblem3.cpp  problem1.cpp
lab1/: 1.1.cpp  1.2.cpp  2020101273  2020101275  2020103907  2020104057_a  2021100452.cpp  2021100777  2021100821  2021101585  2021102150.txt  2021102173  2021104023.rar  2021152273  case1.cpp  case2.cpp  fault1.c  question.txt  segmentation fault 1.cpp  test1.cpp  test2.cpp  段错误-1.cpp  段错误-2.cpp
lab1/2020100097/: w11.cpp  w12.cpp  总结.txt
lab1/2020100099/: 总结.txt
lab1/2020100628/: fault-2.c
lab1/2020100679/: summarize
lab1/2020101246/: 总结.txt  数组越界.cpp  非法内存访问.cpp
lab1/2020101249/: summarize.txt
lab1/2020101255/: week1_1.cpp  week1_2.cpp  总结.txt
lab1/2020101266/: Lab1_1.c  Lab1_1.cpp  Lab1_2.c  Lab1_2.cpp  Lab1_ReadingNote.doc
lab1/2020101273/: 栈溢出.cpp  (+2 more)
lab12/2020100097/: CMakeLists.txt  main.cpp  zongjie.txt
lab12/2020100097/include/: mylib.h
lab12/2020100097/src/name/: mylib.cpp
lab12/2020100679/demo_17/: CMakeLists.txt  main.cpp  math_functions.cpp  math_functions.h
lab12/2020101249/: CMakeLists.txt  summary.txt
lab12/2020101249/src/: main.cpp
lab12/2020101249/src/name/: mylib.cpp
lab12/2020101255/: CMakeLists.txt  main.cpp  summary.txt
lab12/2020101255/Include/: name1.h
lab12/2020101255/Src/: name1.cpp
lab12/2020101273/1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
lab12/2020101273/1/Include/: myname.h
lab12/2020101273/1/SRC/: myname.cpp
lab12/2020101275/: CMakeLists.txt  main.cpp  mylibrary.h  静态库与动态库的区别
lab12/2020101282/: CMakeLists.txt  Static_Dynamic_Summary.text  include_name_mylib.h  src_main.cpp  src_name_mylib.cpp
lab12/2020101283/: CMakeLists.txt  main.cpp
lab12/2020101283/include/name/: header_file.h
lab12/2020101283/src/name/: source_file.cpp
lab12/2020101285/: CMakeLists.txt  main.cpp  动态库、静态库区别总结.md
lab12/2020101285/include/name/: mylib.h
lab12/2020101285/src/name/: mylib.cpp
lab12/2020101286/: CMakeLists.txt  main.cpp
lab12/2020101286/src/: operations.cpp
lab12/2020101294/: CMakeLists.txt  main.cpp  区别.txt
lab12/2020101294/include/name/: task1.h
lab12/2020101294/src/name/: task1.cpp
lab12/2020101303/: CMakeLists.txt  main.cpp  区别.txt
lab12/2020101303/include/Shape/: Shape.h
lab12/2020101303/src/Shape/: Shape.cpp
lab12/2020103438/: CMakeLists.txt  sta_dym_dif.md
lab12/2020103438/inlcude/: hello.h
lab12/2020103438/src/: hello.cpp  hello_main.cpp
lab12/2020103907/: CMakeLists.txt  main.cpp  静态库和动态库的区别
lab12/2020103907/src/name/: sales.cpp
lab12/2020103908/: CMakeLists.txt  main.cpp  对比
lab12/2020103908/include/name/: my_library.h
lab12/2020103908/src/name/: my_library.cpp
lab12/2020104300/: CMakeLists.txt  总结.txt
lab12/2020104300/include/name/: MyLibrary.h
lab12/2020104300/src/name/: MyLibrary.cpp  my_program.cpp
lab12/2021100731/lib_create/: CMakeLists.txt
lab12/2021100731/lib_create/include/add/: add.h
lab12/2021100731/lib_create/src/: main.cpp
lab12/2021100731/lib_create/src/add/: add.cpp
lab12/2021102144_12/text12/: CMakeLists.txt  text12_main.cpp
lab12/2021102144_12/text12/include/cheng/: text12.h
lab12/2021102144_12/text12/src/cheng/: text12.cpp
lab12/2021102147/: CMakeLists.txt  demo.cpp  libraries.md
lab12/2021102147/include/Binary/: Binary.h
lab12/2021102147/src/Binary/: Binary.cpp
lab12/2021102152/: CMakeLists.txt  静态库.txt
lab12/2021102152/src/name/: lib_add.cpp
lab12/2021102153/: CMakeLists.txt  库.txt
lab12/2021102153/include/name/: lib_add.h
lab12/2021102153/src/: main.cpp
lab12/2021102201/: CMakeLists.txt  main.cpp  summary
lab12/2021102201/include/name/: library.h
lab12/2021102201/src/name/: library.cpp
lab13/2020101303/Book_Library/: CMakeLists.txt  main.cpp
lab13/2020101303/Book_Library/include/: Library.h
lab13/2020101303/Book_Library/src/: Library.cpp
lab13/2021100731/task3/: CMakeLists.txt
lab13/2021100731/task3/include/: library.h
lab13/2021100731/task3/src/: library.cpp  main.cpp
lab14/2021100822/demo/account/: CMakeLists.txt
lab14/2021100822/demo/account/include/: account.h
lab14/2021100822/demo/account/src/: account.cpp  main.cpp
lab2/: 2021102150a.cpp.rar  code.cpp  cplusplus-lab-2023-2024-1.xlsx  cplusplus-studentinfo-2023-2024-1.xlsx  question.txt  summary.txt  总结.txt
lab2/2021102147/source_code/: CMakeLists.txt  ManagerSystem.h  Student.cpp  Student.h  StudentManager.cpp
lab2/2021102147/source_code/data/: students.txt
lab3/: Questions.md
lab4/: Questions.md
lab5/: Question.md
(+2097 files in other folders)
