cmake_minimum_required(VERSION 3.12)
project(MyProject)
aux_source_directory(src LIB_SRC)
include_directories("./include")
add_library(library STATIC ${LIB_SRC})
add_executable(main main.cpp)
target_link_libraries(main library)
target_link_libraries(main -static-libstdc++)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/bin)